completed logout
